--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,13 @@ body {
     line-height: 1.7;
 }
 
+.badges {
+  display: flex;
+  gap: 10px; /* Abstand zwischen den Badges */
+  justify-content: center;
+  align-items: center;
+}
+
 /* === HEADER & NAVIGATION === */
 header.header {
     padding: clamp(1.5rem, 4vw, 2.5rem) clamp(1rem, 3vw, 2rem) clamp(1rem, 3vw, 1.5rem);
